--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DH Games</title>
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    
+    <header> 
+    DH GAMES
+    </header>
+    <section>
+        CONTEÚDO SECTION 1
+    </section>
+    <section>
+        CONTEÚDO SECTION 2
+    </section>
+    <footer>
+        CONTEÚDO FOOTER AQUI
+    </footer>
 </body>
 </html>
