--- a/index.html
+++ b/index.html
@@ -1,24 +1,276 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8">
+    <meta lang="pt-BR">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DH Games</title>
-    <link href="styles.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="img/logo/dh-roxo-escuro.png">
+    <link rel="stylesheet" type="text/css" href="css/styles-index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ca14b9e588.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <header> 
-    DH GAMES
+    <header>
+        <section class="overheader">
+            <ul>
+                <li>
+                    <a href="#">
+                        <h2>
+                            <img loading="lazy" src="img/icons/seguro-icon.svg">Segurança garantida
+                        </h2>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <h2>
+                            <img loading="lazy" id="entrega-imediata" src="img/icons/entrega-imediata.svg">Entrega
+                            imediata
+                        </h2>
+                    </a>
+                </li>
+                <li>
+                    <a href="mailto:anacf04@outlook.com">
+                        <h2>
+                            <img loading="lazy" id="email" src="img/icons/send-email.svg">Envie-nos um e-mail
+                        </h2>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://wa.me/5511976070718" target="_blank">
+                        <h2>
+                            <img loading="lazy" id="whatsapp" src="img/icons/whatsapp_white.svg">Whatsapp
+                        </h2>
+                    </a>
+                </li>
+            </ul>
+            <div class="country-selection">
+                <img src="img/icons/brasil.png" alt="Brasil">
+            </div>
+        </section>
+
+        <section class="header-center">
+            <div id="logo">
+                <a href="index.html">
+                    <img id="logo-dh" src="img/logo/logo-dh-yellow.png" alt="DH">
+                    <span id="title-logo">GAMES</span>
+                </a>
+            </div>
+            <div class="search">
+                <div>
+                    <input type="text" name="search" placeholder="O que você está procurando?">
+                    <button>
+                        <img src="img/icons/lupa-cinza.svg" alt="Pesquisar">
+                    </button>
+                </div>
+            </div>
+            <div>
+                <nav class="header-options">
+                    <ul class="menu">
+                        <li id="suport">
+                            <img id="icone-suporte" src="img/icons/icone-suporte.png">
+                            <a href="txt/suporte.txt">Suporte ao cliente</a>
+                        </li>
+                        <li id="login">
+                            <img id="icone-login" src="img/icons/icone-login.png">
+                            <a href="txt/login.txt">Faça seu login</br>ou cadastre-se</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="shopping-cart">
+                <ul>
+                    <li><a href="txt/carrinho.txt">
+                        <img src="img/icons/outline-shopping-cart.png" alt="Carrinho"> </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="settings">
+                <ul>
+                    <li><a href="">
+                        <img src="img/icons/settings-white.svg" alt="Configurações da conta"> </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <hr id="divisoria">
+
+        <nav class="categorias">
+            <ul>
+                <li><a href="txt/click-categoria.txt">Jogos mobile</a>
+                    <ul class="sub-categorias">
+                        <li><a href="txt/click-categoria.txt">free fire</a></li>
+                        <li><a href="txt/click-categoria.txt">Wild rift</a></li>
+                        <li><a href="txt/click-categoria.txt">PUBG mobile</a></li>
+                        <li><a href="txt/click-categoria.txt">clash royale</a></li>
+                        <li><a href="txt/click-categoria.txt">mobile legends</a></li>
+
+                    </ul>
+                </li>
+                <li><a href="txt/click-categoria.txt">Jogos pc</a>
+                    <ul class="sub-categorias">
+                        <li><a href="txt/click-categoria.txt">CS:GO</a></li>
+                        <li><a href="txt/click-categoria.txt">Fortnite</a></li>
+                        <li><a href="txt/click-categoria.txt">Call of Duty</a></li>
+                        <li><a href="txt/click-categoria.txt">League of Legends</a></li>
+                        <li><a href="txt/click-categoria.txt">Grand Theft Auto V</a></li>
+                    </ul>
+                </li>
+                <li><a href="txt/click-categoria.txt">Playstation</a>
+                    <ul class="sub-categorias">
+                        <li><a href="txt/click-categoria.txt">FIFA</a></li>
+                        <li><a href="txt/click-categoria.txt">God of war</a></li>
+                        <li><a href="txt/click-categoria.txt">Final Fantasy</a></li>
+                        <li><a href="txt/click-categoria.txt">Street Fighter</a></li>
+                        <li><a href="txt/click-categoria.txt">Gift Card Digital</a></li>
+                    </ul>
+                </li>
+                <li><a href="txt/click-categoria.txt">xbox</a>
+                    <ul class="sub-categorias">
+                        <li><a href="txt/click-categoria.txt">Diablo</a></li>
+                        <li><a href="txt/click-categoria.txt">Fortnite</a></li>
+                        <li><a href="txt/click-categoria.txt">Battlefield</a></li>
+                        <li><a href="txt/click-categoria.txt">Assassin's Creed</a></li>
+                        <li><a href="txt/click-categoria.txt">Gift Card Digital</a></li>
+                    </ul>
+                </li>
+                <li><a href="txt/click-categoria.txt">steam</a>
+                    <ul class="sub-categorias">
+                        <li><a href="txt/click-categoria.txt">Dota 2</a></li>
+                        <li><a href="txt/click-categoria.txt">Destiny 2</a></li>
+                        <li><a href="txt/click-categoria.txt">Dark Souls</a></li>
+                        <li><a href="txt/click-categoria.txt">Counter Strike</a></li>
+                        <li><a href="txt/click-categoria.txt">Gift Card Digital</a></li>
+                    </ul>
+                </li>
+                <li><a href="txt/click-categoria.txt">Gift Card</a>
+                    <ul class="sub-categorias">
+                        <li><a href="txt/click-categoria.txt">XBOX</a></li>
+                        <li><a href="txt/click-categoria.txt">STEAM</a></li>
+                        <li><a href="txt/click-categoria.txt">Playstation</a></li>
+                        <li><a href="txt/click-categoria.txt">Play Store</a></li>
+                        <li><a href="txt/click-categoria.txt">Apple Store</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
     </header>
-    <section>
-        CONTEÚDO SECTION 1
+
+    <main>
+        <section class="container-carousel">
+            <div class="carousel">
+
+                <div class="slides">
+                    <div id="back" class="btn">
+                        <i class="fas fa-chevron-left"></i>
+                    </div>
+
+                    <div id="next" class="btn">
+                        <i class="fas fa-chevron-right"></i>
+                    </div>
+
+                    <div id="atual" class="image"><a href="txt/click-slider.txt" target="_blank">
+                            <img src="img/games/0.png" alt="Counter Strike: Global Offensive"></a>
+                    </div>
+
+                    <div class="image"><a href="txt/click-slider.txt" target="_blank">
+                            <img src="img/games/1.png" alt="FIFA 22"></a>
+                    </div>
+
+                    <div class="image"><a href="txt/click-slider.txt" target="_blank">
+                            <img src="img/games/2.png" alt="Grand Theft Auto V"></a>
+                    </div>
+
+                    <div class="image"><a href="txt/click-slider.txt" target="_blank">
+                            <img src="img/games/3.png" alt="League of Legends"></a>
+                    </div>
+
+                    <div class="image"><a href="txt/click-slider.txt" target="_blank">
+                            <img src="img/games/4.png" alt="Gpd of War"></a>
+                    </div>
+                </div>
+
+                <div class="balls"></div>
+
+                <script>
+                    var balls = document.querySelector('.balls')
+                    var quant = document.querySelectorAll('.slides .image')
+                    var atual = 0
+                    var imagem = document.getElementById('atual')
+                    var next = document.getElementById('next')
+                    var back = document.getElementById('back')
+                    var rolar = true
+
+                    for (let i = 0; i < quant.length; i++) {
+                        var div = document.createElement('div')
+                        div.id = i
+                        balls.appendChild(div)
+                    }
+                    document.getElementById('0').classList.add('imgAtual')
+
+                    var pos = document.querySelectorAll('.balls div')
+
+                    for (let i = 0; i < pos.length; i++) {
+                        pos[i].addEventListener('click', () => {
+                            atual = pos[i].id
+                            rolar = false
+                            slide()
+                        })
+                    }
+
+                    back.addEventListener('click', () => {
+                        atual--
+                        rolar = false
+                        slide()
+                    })
+                    next.addEventListener('click', () => {
+                        atual++
+                        rolar = false
+                        slide()
+                    })
+
+                    function slide() {
+                        if (atual >= quant.length) {
+                            atual = 0
+                        }
+                        else if (atual < 0) {
+                            atual = quant.length - 1
+                        }
+                        document.querySelector('.imgAtual').classList.remove('imgAtual')
+                        imagem.style.marginLeft = -1500 * atual + 'px'
+                        document.getElementById(atual).classList.add('imgAtual')
+                    }
+                    setInterval(() => {
+                        if (rolar) {
+                            atual++
+                            slide()
+                        } else {
+                            rolar = true
+                        }
+                    }, 5000)
+                    slide()
+                </script>
+            </div>
+        </section>
+    </main>
+
+    <section class="chat-container">
+        <a href="#" class="chat">
+            <strong>Precisa de<br>ajuda?</strong>
+            <img src="img/icons/Call-Service.png">
+        </a>
     </section>
-    <section>
-        CONTEÚDO SECTION 2
-    </section>
+
     <footer>
-        CONTEÚDO FOOTER AQUI
     </footer>
+
 </body>
+
 </html>
