--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
 <head>
     <meta charset="utf-8">
-    <meta lang="pt-BR">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DH Games</title>
@@ -56,6 +55,8 @@
             </div>
         </section>
 
+        <hr id="divider-overheader">
+
         <section class="header-center">
             <div id="logo">
                 <a href="index.html">
@@ -88,80 +89,82 @@
             <div class="shopping-cart">
                 <ul>
                     <li><a href="txt/carrinho.txt">
-                        <img src="img/icons/outline-shopping-cart.png" alt="Carrinho"> </a>
+                            <img src="img/icons/outline-shopping-cart.png" alt="Carrinho"> </a>
                     </li>
                 </ul>
             </div>
             <div class="settings">
                 <ul>
                     <li><a href="">
-                        <img src="img/icons/settings-white.svg" alt="Configurações da conta"> </a>
+                            <img src="img/icons/settings-white.svg" alt="Configurações da conta"> </a>
                     </li>
                 </ul>
             </div>
         </section>
 
-        <hr id="divisoria">
+        <hr id="divider-to-categories">
 
-        <nav class="categorias">
-            <ul>
-                <li><a href="txt/click-categoria.txt">Jogos mobile</a>
-                    <ul class="sub-categorias">
-                        <li><a href="txt/click-categoria.txt">free fire</a></li>
-                        <li><a href="txt/click-categoria.txt">Wild rift</a></li>
-                        <li><a href="txt/click-categoria.txt">PUBG mobile</a></li>
-                        <li><a href="txt/click-categoria.txt">clash royale</a></li>
-                        <li><a href="txt/click-categoria.txt">mobile legends</a></li>
+        <section>
+            <nav class="categories">
+                <ul>
+                    <li><a href="#">Jogos mobile</a>
+                        <ul class="sub-categorias">
+                            <li><a href="#">free fire</a></li>
+                            <li><a href="#">Wild rift</a></li>
+                            <li><a href="#">PUBG mobile</a></li>
+                            <li><a href="#">clash royale</a></li>
+                            <li><a href="#">mobile legends</a></li>
 
-                    </ul>
-                </li>
-                <li><a href="txt/click-categoria.txt">Jogos pc</a>
-                    <ul class="sub-categorias">
-                        <li><a href="txt/click-categoria.txt">CS:GO</a></li>
-                        <li><a href="txt/click-categoria.txt">Fortnite</a></li>
-                        <li><a href="txt/click-categoria.txt">Call of Duty</a></li>
-                        <li><a href="txt/click-categoria.txt">League of Legends</a></li>
-                        <li><a href="txt/click-categoria.txt">Grand Theft Auto V</a></li>
-                    </ul>
-                </li>
-                <li><a href="txt/click-categoria.txt">Playstation</a>
-                    <ul class="sub-categorias">
-                        <li><a href="txt/click-categoria.txt">FIFA</a></li>
-                        <li><a href="txt/click-categoria.txt">God of war</a></li>
-                        <li><a href="txt/click-categoria.txt">Final Fantasy</a></li>
-                        <li><a href="txt/click-categoria.txt">Street Fighter</a></li>
-                        <li><a href="txt/click-categoria.txt">Gift Card Digital</a></li>
-                    </ul>
-                </li>
-                <li><a href="txt/click-categoria.txt">xbox</a>
-                    <ul class="sub-categorias">
-                        <li><a href="txt/click-categoria.txt">Diablo</a></li>
-                        <li><a href="txt/click-categoria.txt">Fortnite</a></li>
-                        <li><a href="txt/click-categoria.txt">Battlefield</a></li>
-                        <li><a href="txt/click-categoria.txt">Assassin's Creed</a></li>
-                        <li><a href="txt/click-categoria.txt">Gift Card Digital</a></li>
-                    </ul>
-                </li>
-                <li><a href="txt/click-categoria.txt">steam</a>
-                    <ul class="sub-categorias">
-                        <li><a href="txt/click-categoria.txt">Dota 2</a></li>
-                        <li><a href="txt/click-categoria.txt">Destiny 2</a></li>
-                        <li><a href="txt/click-categoria.txt">Dark Souls</a></li>
-                        <li><a href="txt/click-categoria.txt">Counter Strike</a></li>
-                        <li><a href="txt/click-categoria.txt">Gift Card Digital</a></li>
-                    </ul>
-                </li>
-                <li><a href="txt/click-categoria.txt">Gift Card</a>
-                    <ul class="sub-categorias">
-                        <li><a href="txt/click-categoria.txt">XBOX</a></li>
-                        <li><a href="txt/click-categoria.txt">STEAM</a></li>
-                        <li><a href="txt/click-categoria.txt">Playstation</a></li>
-                        <li><a href="txt/click-categoria.txt">Play Store</a></li>
-                        <li><a href="txt/click-categoria.txt">Apple Store</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+                        </ul>
+                    </li>
+                    <li><a href="#">Jogos pc</a>
+                        <ul class="sub-categorias">
+                            <li><a href="#">CS:GO</a></li>
+                            <li><a href="#">Fortnite</a></li>
+                            <li><a href="#">Call of Duty</a></li>
+                            <li><a href="#">League of Legends</a></li>
+                            <li><a href="#">Grand Theft Auto V</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="txt/click-categoria.txt">Playstation</a>
+                        <ul class="sub-categorias">
+                            <li><a href="#">FIFA</a></li>
+                            <li><a href="#">God of war</a></li>
+                            <li><a href="#">Final Fantasy</a></li>
+                            <li><a href="#">Street Fighter</a></li>
+                            <li><a href="#">Gift Card Digital</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">xbox</a>
+                        <ul class="sub-categorias">
+                            <li><a href="#">Diablo</a></li>
+                            <li><a href="#">Fortnite</a></li>
+                            <li><a href="#">Battlefield</a></li>
+                            <li><a href="#">Assassin's Creed</a></li>
+                            <li><a href="#">Gift Card Digital</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">steam</a>
+                        <ul class="sub-categorias">
+                            <li><a href="#">Dota 2</a></li>
+                            <li><a href="#">Destiny 2</a></li>
+                            <li><a href="#">Dark Souls</a></li>
+                            <li><a href="#">Counter Strike</a></li>
+                            <li><a href="#">Gift Card Digital</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Gift Card</a>
+                        <ul class="sub-categorias">
+                            <li><a href="#">XBOX</a></li>
+                            <li><a href="#">STEAM</a></li>
+                            <li><a href="#">Playstation</a></li>
+                            <li><a href="#">Play Store</a></li>
+                            <li><a href="#">Apple Store</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </section>
     </header>
 
     <main>
@@ -196,81 +199,117 @@
                     <div class="image"><a href="txt/click-slider.txt" target="_blank">
                             <img src="img/games/4.png" alt="Gpd of War"></a>
                     </div>
+
+                    <div class="balls"></div>
+
                 </div>
-
-                <div class="balls"></div>
-
-                <script>
-                    var balls = document.querySelector('.balls')
-                    var quant = document.querySelectorAll('.slides .image')
-                    var atual = 0
-                    var imagem = document.getElementById('atual')
-                    var next = document.getElementById('next')
-                    var back = document.getElementById('back')
-                    var rolar = true
-
-                    for (let i = 0; i < quant.length; i++) {
-                        var div = document.createElement('div')
-                        div.id = i
-                        balls.appendChild(div)
-                    }
-                    document.getElementById('0').classList.add('imgAtual')
-
-                    var pos = document.querySelectorAll('.balls div')
-
-                    for (let i = 0; i < pos.length; i++) {
-                        pos[i].addEventListener('click', () => {
-                            atual = pos[i].id
-                            rolar = false
-                            slide()
-                        })
-                    }
-
-                    back.addEventListener('click', () => {
-                        atual--
-                        rolar = false
-                        slide()
-                    })
-                    next.addEventListener('click', () => {
-                        atual++
-                        rolar = false
-                        slide()
-                    })
-
-                    function slide() {
-                        if (atual >= quant.length) {
-                            atual = 0
-                        }
-                        else if (atual < 0) {
-                            atual = quant.length - 1
-                        }
-                        document.querySelector('.imgAtual').classList.remove('imgAtual')
-                        imagem.style.marginLeft = -1500 * atual + 'px'
-                        document.getElementById(atual).classList.add('imgAtual')
-                    }
-                    setInterval(() => {
-                        if (rolar) {
-                            atual++
-                            slide()
-                        } else {
-                            rolar = true
-                        }
-                    }, 5000)
-                    slide()
-                </script>
             </div>
+
+            <script>
+                var balls = document.querySelector('.balls')
+                var quant = document.querySelectorAll('.slides .image')
+                var atual = 0
+                var imagem = document.getElementById('atual')
+                var next = document.getElementById('next')
+                var back = document.getElementById('back')
+                var rolar = true
+
+                for (let i = 0; i < quant.length; i++) {
+                    var div = document.createElement('div')
+                    div.id = i
+                    balls.appendChild(div)
+                }
+                document.getElementById('0').classList.add('imgAtual')
+
+                var pos = document.querySelectorAll('.balls div')
+
+                for (let i = 0; i < pos.length; i++) {
+                    pos[i].addEventListener('click', () => {
+                        atual = pos[i].id
+                        rolar = false
+                        slide()
+                    })
+                }
+
+                back.addEventListener('click', () => {
+                    atual--
+                    rolar = false
+                    slide()
+                })
+                next.addEventListener('click', () => {
+                    atual++
+                    rolar = false
+                    slide()
+                })
+
+                function slide() {
+                    if (atual >= quant.length) {
+                        atual = 0
+                    }
+                    else if (atual < 0) {
+                        atual = quant.length - 1
+                    }
+                    document.querySelector('.imgAtual').classList.remove('imgAtual')
+                    imagem.style.marginLeft = -90 * atual + 'rem'
+                    document.getElementById(atual).classList.add('imgAtual')
+                }
+                setInterval(() => {
+                    if (rolar) {
+                        atual++
+                        slide()
+                    } else {
+                        rolar = true
+                    }
+                }, 5000)
+                slide()
+            </script>
+
         </section>
-    </main>
 
-    <section class="chat-container">
-        <a href="#" class="chat">
-            <strong>Precisa de<br>ajuda?</strong>
-            <img src="img/icons/Call-Service.png">
-        </a>
-    </section>
+        <section class="teste-scroll">
+            <h1>teste</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quasi doloremque quia velit vero. Nam
+                necessitatibus, harum illo iste vel ratione, soluta eligendi eveniet, totam placeat omnis officia fugit
+                cupiditate!</p> <br> <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quasi doloremque quia velit vero. Nam
+                necessitatibus, harum illo iste vel ratione, soluta eligendi eveniet, totam placeat omnis officia fugit
+                cupiditate!</p> <br> <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quasi doloremque quia velit vero. Nam
+                necessitatibus, harum illo iste vel ratione, soluta eligendi eveniet, totam placeat omnis officia fugit
+                cupiditate!</p> <br> <br>
+            <h1>teste</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti dolorem illum odit culpa sapiente et,
+                odio
+                exercitationem, accusamus architecto ducimus nihil veritatis, asperiores ad temporibus molestiae.
+            </p> <br> <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quasi doloremque quia velit vero. Nam
+                necessitatibus, harum illo iste vel ratione, soluta eligendi eveniet, totam placeat omnis officia fugit
+                cupiditate!</p> <br> <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quasi doloremque quia velit vero. Nam
+                necessitatibus, harum illo iste vel ratione, soluta eligendi eveniet, totam placeat omnis officia fugit
+                cupiditate!</p>
+            <h1>teste</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quasi doloremque quia velit vero. Nam
+                necessitatibus, harum illo iste vel ratione, soluta eligendi eveniet, totam placeat omnis officia fugit
+                cupiditate!</p> <br> <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quasi doloremque quia velit vero. Nam
+                necessitatibus, harum illo iste vel ratione, soluta eligendi eveniet, totam placeat omnis officia fugit
+                cupiditate!</p> <br> <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quasi doloremque quia velit vero. Nam
+                necessitatibus, harum illo iste vel ratione, soluta eligendi eveniet, totam placeat omnis officia fugit
+                cupiditate!</p> <br> <br>
+        </section>
 
-    <footer>
-    </footer>
+
+        <section class="chat-container">
+            <a href="#" class="chat">
+                <strong>Precisa de<br>ajuda?</strong>
+                <img src="img/icons/Call-Service.png">
+            </a>
+        </section>
+
+        <footer>
+        </footer>
 
 </body>
 
