fechamento tag main

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 necessitatibus, harum illo iste vel ratione, soluta eligendi eveniet, totam placeat omnis officia fugit
                 cupiditate!</p> <br> <br>
         </section>
-
+    </main>    
 
         <section class="chat-container">
             <a href="#" class="chat">
@@ -307,9 +307,6 @@
                 <img src="img/icons/Call-Service.png">
             </a>
         </section>
-
-        <footer>
-        </footer>
 
 </body>
 
