alterado header-options

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <section class="overheader">
+        <!-- <section class="overheader">
             <ul>
                 <li>
                     <a href="#">
@@ -56,14 +56,16 @@
         </section>
 
         <hr id="divider-overheader">
-
+ -->
         <section class="header-center">
+
             <div id="logo">
                 <a href="index.html">
                     <img id="logo-dh" src="img/logo/logo-dh-yellow.png" alt="DH">
                     <span id="title-logo">GAMES</span>
                 </a>
             </div>
+
             <div class="search">
                 <div>
                     <input type="text" name="search" placeholder="O que você está procurando?">
@@ -72,20 +74,20 @@
                     </button>
                 </div>
             </div>
-            <div>
-                <nav class="header-options">
-                    <ul class="menu">
-                        <li id="suport">
-                            <img id="icone-suporte" src="img/icons/icone-suporte.png">
-                            <a href="txt/suporte.txt">Suporte ao cliente</a>
-                        </li>
-                        <li id="login">
-                            <img id="icone-login" src="img/icons/icone-login.png">
-                            <a href="txt/login.txt">Faça seu login</br>ou cadastre-se</a>
-                        </li>
-                    </ul>
+
+            <div class="header-options">
+                <nav>
+                    <div class="client-support">
+                        <img src="img/icons/support-icon.png">
+                        <a href="#">Suporte ao cliente</a>
+                    </div>
+                    <div class="login-signup">
+                        <img src="img/icons/login-icon.png">
+                        <a href="#">Faça seu login <br> ou cadastre-se</a>
+                    </div>
                 </nav>
             </div>
+
             <div class="shopping-cart">
                 <ul>
                     <li><a href="txt/carrinho.txt">
@@ -93,6 +95,7 @@
                     </li>
                 </ul>
             </div>
+
             <div class="settings">
                 <ul>
                     <li><a href="">
@@ -100,9 +103,10 @@
                     </li>
                 </ul>
             </div>
+            
         </section>
 
-        <hr id="divider-to-categories">
+        <!-- <hr id="divider-to-categories">
 
         <section>
             <nav class="categories">
@@ -307,7 +311,7 @@
                 <img src="img/icons/Call-Service.png">
             </a>
         </section>
-
+ -->
 </body>
 
 </html>
