--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <!-- <section class="overheader">
+        <section class="overheader">
             <ul>
                 <li>
                     <a href="#">
@@ -56,7 +56,7 @@
         </section>
 
         <hr id="divider-overheader">
- -->
+
         <section class="header-center">
 
             <div id="logo">
@@ -106,7 +106,7 @@
             
         </section>
 
-        <!-- <hr id="divider-to-categories">
+        <hr id="divider-to-categories">
 
         <section>
             <nav class="categories">
@@ -311,7 +311,7 @@
                 <img src="img/icons/Call-Service.png">
             </a>
         </section>
- -->
+
 </body>
 
 </html>
