adicionado footer/formas de pagamento

--- a/index.html
+++ b/index.html
@@ -301,6 +301,73 @@
         </a>
     </section>
 
+    <footer>
+        <section class="payment-methods">
+
+            <div class="payment-methods-title">
+                <span>Formas de pagamento</span>
+            </div>
+
+            <br>
+            <div class="payment-type">
+
+                <div class="payment-column">
+                    <div id="credit-card">
+                        <span>Cartões de crédito</span>
+                        <br>
+                        <img src="img/formas-de-pagamento/visa-icon.png" alt="Visa">
+                        <img src="img/formas-de-pagamento/credito-mastercard-icon.png" alt="Mastercard">
+                        <img src="img/formas-de-pagamento/credito-elo-icon.png" alt="Elo">
+                        <img src="img/formas-de-pagamento/credito-hipercard-icon.png" alt="Hipercard">
+                        <img src="img/formas-de-pagamento/credito-diners-icon.png" alt="Diners Club">
+                    </div>
+
+                    <div id="bank-transfer">
+                        <span>Transferência bancária</span>
+                        <br>
+                        <img src="img/formas-de-pagamento/debito-bradesco-icon.png" alt="Bradesco">
+                        <img src="img/formas-de-pagamento/debito-santander-icon.png" alt="Santander">
+                        <img src="img/formas-de-pagamento/pix.png" alt="Pix">
+                    </div>
+                </div>
+
+                <div class="payment-column">
+                    <div id="debit-card">
+                        <span>Cartões de débito</span>
+                        <br>
+                        <img src="img/formas-de-pagamento/visaelectron-icon.png" alt="Visa Electron">
+                        <img src="img/formas-de-pagamento/mastercard-icon.png" alt="Mastercard">
+                    </div>
+
+                    <div id="debit-account">
+                        <span>Débito em conta</span>
+                        <br>
+                        <img src="img/formas-de-pagamento/debito-bancario-brasil-icon.png" alt="Banco do Brasil">
+                        <img src="img/formas-de-pagamento/debito-bancario-itau-icon.png" alt="Itaú">
+                    </div>
+                </div>
+
+                <div class="payment-column">
+                    <div id="apps">
+                        <span>Aplicativos</span>
+                        <br>
+                        <img src="img/formas-de-pagamento/picpay-icon.png" alt="Picpay">
+                        <img src="img/formas-de-pagamento/iti-icon.png" alt="Iti">
+                        <img src="img/formas-de-pagamento/atar-pay-icon.png" alt="Atar">
+                    </div>
+
+                    <div id="boleto">
+                        <span>Boleto</span>
+                        <br>
+                        <img src="img/formas-de-pagamento/boleto.png" alt="Boleto bancário">
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+    </footer>
+
 </body>
 
 </html>
