--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                     </div>
 
                     <div id="boleto">
-                        <span>Boleto</span>
+                        <span>Boleto bancário</span>
                         <br>
                         <img src="img/formas-de-pagamento/boleto.png" alt="Boleto bancário">
                     </div>
