adicionado social networks ao footer

--- a/index.html
+++ b/index.html
@@ -362,10 +362,26 @@
                         <img src="img/formas-de-pagamento/boleto.png" alt="Boleto bancário">
                     </div>
                 </div>
-
             </div>
         </section>
 
+        <section class="networks-security">
+            <div class="social-networks">
+                <span class="social-networks-title">Siga-nos nas redes sociais</span>
+                <br>
+                <div class="social-networks-icons">
+                    <img src="img/redes-sociais/facebook.png" alt="Facebook">
+                    <img src="img/redes-sociais/instagram.png" alt="Instagram">
+                    <img src="img/redes-sociais/twitter.png" alt="Twitter">
+                    <img src="img/redes-sociais/youtube.png" alt="Youtube">
+                </div>
+            </div>
+            <br><br>
+            <div class="security-seal">
+                <img src="img/icons/teste-siteBlindado.png" alt="Site blindado">
+            </div>
+
+        </section>
     </footer>
 
 </body>
