--- a/index.html
+++ b/index.html
@@ -302,16 +302,14 @@
     </section>
 
     <footer>
-        <section class="payment-methods">
+        <section class="info-dh">
+            <div class="payment-methods">
 
-            <div class="payment-methods-title">
-                <span>Formas de pagamento</span>
-            </div>
+                <div class="payment-methods-title">
+                    <span>Formas de pagamento</span>
+                </div> <br>
 
-            <br>
-            <div class="payment-type">
-
-                <div class="payment-column">
+                <div class="payment-type">
                     <div id="credit-card">
                         <span>Cartões de crédito</span>
                         <br>
@@ -322,16 +320,6 @@
                         <img src="img/formas-de-pagamento/credito-diners-icon.png" alt="Diners Club">
                     </div>
 
-                    <div id="bank-transfer">
-                        <span>Transferência bancária</span>
-                        <br>
-                        <img src="img/formas-de-pagamento/debito-bradesco-icon.png" alt="Bradesco">
-                        <img src="img/formas-de-pagamento/debito-santander-icon.png" alt="Santander">
-                        <img src="img/formas-de-pagamento/pix.png" alt="Pix">
-                    </div>
-                </div>
-
-                <div class="payment-column">
                     <div id="debit-card">
                         <span>Cartões de débito</span>
                         <br>
@@ -345,9 +333,15 @@
                         <img src="img/formas-de-pagamento/debito-bancario-brasil-icon.png" alt="Banco do Brasil">
                         <img src="img/formas-de-pagamento/debito-bancario-itau-icon.png" alt="Itaú">
                     </div>
-                </div>
 
-                <div class="payment-column">
+                    <div id="bank-transfer">
+                        <span>Transferência bancária</span>
+                        <br>
+                        <img src="img/formas-de-pagamento/debito-bradesco-icon.png" alt="Bradesco">
+                        <img src="img/formas-de-pagamento/debito-santander-icon.png" alt="Santander">
+                        <img src="img/formas-de-pagamento/pix.png" alt="Pix">
+                    </div>
+
                     <div id="apps">
                         <span>Aplicativos</span>
                         <br>
@@ -361,26 +355,42 @@
                         <br>
                         <img src="img/formas-de-pagamento/boleto.png" alt="Boleto bancário">
                     </div>
+
+                </div>
+            </div>
+
+            <div class="networks-container">
+                <div class="social-networks">
+                    <span class="social-networks-title">Siga-nos nas redes sociais</span>
+                    <br>
+                    <div class="social-networks-icons">
+                        <a href="txt/social-network.txt" target="_blank"><img src="img/redes-sociais/facebook.png" alt="Facebook"></a>
+                        <a href="txt/social-network.txt" target="_blank"><img src="img/redes-sociais/instagram.png" alt="Instagram"></a>
+                        <a href="txt/social-network.txt" target="_blank"><img src="img/redes-sociais/twitter.png" alt="Twitter"></a>
+                        <a href="txt/social-network.txt" target="_blank"><img src="img/redes-sociais/youtube.png" alt="Youtube"></a>
+                    </div>
+                </div> <br><br>
+
+                <div class="security">
+                    <span>Segurança garantida</span>
+                    <a href="https://www.siteblindado.com/" target="_blank"><img src="img/icons/site-blindado-logo.png" alt="Site blindado"></a>
                 </div>
             </div>
         </section>
 
-        <section class="networks-security">
-            <div class="social-networks">
-                <span class="social-networks-title">Siga-nos nas redes sociais</span>
+        <section class="copyright">
+            <p>
+                © 2021, DH Games Ltda. TODOS OS DIREITOS RESERVADOS. Todas as marcas são propriedade dos seus
+                respectivos donos nos EUA e em outros países.
                 <br>
-                <div class="social-networks-icons">
-                    <img src="img/redes-sociais/facebook.png" alt="Facebook">
-                    <img src="img/redes-sociais/instagram.png" alt="Instagram">
-                    <img src="img/redes-sociais/twitter.png" alt="Twitter">
-                    <img src="img/redes-sociais/youtube.png" alt="Youtube">
-                </div>
-            </div>
-            <br><br>
-            <div class="security-seal">
-                <img src="img/icons/teste-siteBlindado.png" alt="Site blindado">
-            </div>
-
+                Os Horários do site seguem a Hora Oficial de Brasília (GMT -3).
+            </p> <br>
+            <p>
+                DH Games Ltda. CNPJ: 01-012-012/0001-01. Avenida Paulista, nº 012 - São Paulo
+                - SP Cep: 01234-567.
+                <br>
+                E-mail: atendimento@dhgames.com.br / Telefone: (11) 0123-4567
+            </p>
         </section>
     </footer>
 
