iniciado section de promoções

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <script src="https://kit.fontawesome.com/ca14b9e588.js" crossorigin="anonymous"></script>
 </head>
 
-
 <body>
     <header>
         <section class="overheader">
@@ -259,39 +258,46 @@
 
         </section>
 
-        <section class="teste-scroll">
-            <h1>teste</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quasi doloremque quia velit vero. Nam
-                necessitatibus, harum illo iste vel ratione, soluta eligendi eveniet, totam placeat omnis officia fugit
-                cupiditate!</p> <br> <br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quasi doloremque quia velit vero. Nam
-                necessitatibus, harum illo iste vel ratione, soluta eligendi eveniet, totam placeat omnis officia fugit
-                cupiditate!</p> <br> <br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quasi doloremque quia velit vero. Nam
-                necessitatibus, harum illo iste vel ratione, soluta eligendi eveniet, totam placeat omnis officia fugit
-                cupiditate!</p> <br> <br>
-            <h1>teste</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti dolorem illum odit culpa sapiente et,
-                odio
-                exercitationem, accusamus architecto ducimus nihil veritatis, asperiores ad temporibus molestiae.
-            </p> <br> <br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quasi doloremque quia velit vero. Nam
-                necessitatibus, harum illo iste vel ratione, soluta eligendi eveniet, totam placeat omnis officia fugit
-                cupiditate!</p> <br> <br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quasi doloremque quia velit vero. Nam
-                necessitatibus, harum illo iste vel ratione, soluta eligendi eveniet, totam placeat omnis officia fugit
-                cupiditate!</p>
-            <h1>teste</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quasi doloremque quia velit vero. Nam
-                necessitatibus, harum illo iste vel ratione, soluta eligendi eveniet, totam placeat omnis officia fugit
-                cupiditate!</p> <br> <br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quasi doloremque quia velit vero. Nam
-                necessitatibus, harum illo iste vel ratione, soluta eligendi eveniet, totam placeat omnis officia fugit
-                cupiditate!</p> <br> <br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quasi doloremque quia velit vero. Nam
-                necessitatibus, harum illo iste vel ratione, soluta eligendi eveniet, totam placeat omnis officia fugit
-                cupiditate!</p> <br> <br>
+        <section class="super-promotions">
+
+            <h1 class="title-super-promotions">
+                <span>Super promoções</span>
+            </h1>
+            
+            <div class="slider-promotions-container">
+                
+                <div class="image-slider">
+                    <div class="slides-div" id="slide-1">
+                        <a href="" target="_blank"><img src="img/games/slider-promotions/apex-legends-ps4.jpg" alt="Apex Legends PS4" class="promotions-img" id="promotions-img1"></a>
+                    </div>
+
+                    <div class="slides-div" id="slide-2">
+                        <a href="" target="_blank"><img src="img/games/slider-promotions/dissidia-ps4.jpg" alt="Dissidia Final Fantasy PS4" class="promotions-img" id="promotions-img2"></a>
+                    </div>
+
+                    <div class="slides-div" id="slide-3">
+                        <a href="" target="_blank"><img src="img/games/slider-promotions/yakuza-ps4.jpg" alt="The Yakuza PS4" class="promotions-img" id="promotions-img3"></a>
+                    </div>
+
+                    <div class="slides-div" id="slide-4">
+                        <a href="" target="_blank"><img src="img/games/slider-promotions/assassins-creed-xbox.jpg" alt="Assassins Creed XBOX" class="promotions-img" id="promotions-img4"></a>
+                    </div>
+
+                    <div class="slides-div" id="slide-5">
+                        <a href="" target="_blank"><img src="img/games/slider-promotions/battlefield-xbox.jpg" alt="Battlefield XBOX" class="promotions-img" id="promotions-img5"></a>
+                    </div>
+
+
+                    <div class="slides-div" id="slide-6">
+                        <a href="" target="_blank"><img src="img/games/slider-promotions/dark-souls3-xbox.jpg" alt="Dark Souls III XBOX" class="promotions-img" id="promotions-img6"></a>
+                    </div>
+
+                </div>
+
+            </div>
+
         </section>
+
     </main>
 
     <section class="chat-container">
@@ -300,6 +306,8 @@
             <img src="img/icons/Call-Service.png">
         </a>
     </section>
+
+    <br><br>
 
     <footer>
         <section class="info-dh">
@@ -364,16 +372,21 @@
                     <span class="social-networks-title">Siga-nos nas redes sociais</span>
                     <br>
                     <div class="social-networks-icons">
-                        <a href="txt/social-network.txt" target="_blank"><img src="img/redes-sociais/facebook.png" alt="Facebook"></a>
-                        <a href="txt/social-network.txt" target="_blank"><img src="img/redes-sociais/instagram.png" alt="Instagram"></a>
-                        <a href="txt/social-network.txt" target="_blank"><img src="img/redes-sociais/twitter.png" alt="Twitter"></a>
-                        <a href="txt/social-network.txt" target="_blank"><img src="img/redes-sociais/youtube.png" alt="Youtube"></a>
+                        <a href="txt/social-network.txt" target="_blank"><img src="img/redes-sociais/facebook.png"
+                                alt="Facebook"></a>
+                        <a href="txt/social-network.txt" target="_blank"><img src="img/redes-sociais/instagram.png"
+                                alt="Instagram"></a>
+                        <a href="txt/social-network.txt" target="_blank"><img src="img/redes-sociais/twitter.png"
+                                alt="Twitter"></a>
+                        <a href="txt/social-network.txt" target="_blank"><img src="img/redes-sociais/youtube.png"
+                                alt="Youtube"></a>
                     </div>
                 </div> <br><br>
 
                 <div class="security">
                     <span>Segurança garantida</span>
-                    <a href="https://www.siteblindado.com/" target="_blank"><img src="img/icons/site-blindado-logo.png" alt="Site blindado"></a>
+                    <a href="https://www.siteblindado.com/" target="_blank"><img src="img/icons/site-blindado-logo.png"
+                            alt="Site blindado"></a>
                 </div>
             </div>
         </section>
