--- a/index.html
+++ b/index.html
@@ -263,33 +263,94 @@
             <h1 class="title-super-promotions">
                 <span>Super promoções</span>
             </h1>
-            
-            <div class="slider-promotions-container">
-                
-                <div class="image-slider">
-                    <div class="slides-div" id="slide-1">
-                        <a href="" target="_blank"><img src="img/games/slider-promotions/apex-legends-ps4.jpg" alt="Apex Legends PS4" class="promotions-img" id="promotions-img1"></a>
+
+            <div class="promotions-container">
+
+                <div class="cards-promotions">
+
+                    <div class="card-promotion">
+                        <img src="img/games/slider-promotions/apex-legends-ps4.jpg" alt="Apex Legends PS4"
+                            class="promotions-img">
+
+                        <p class="title-card-promotion"> <b>APEX LEGENDS </b> </p>
+
+                        <div class="price-card-promotions">
+                            <p class="oldPrice-card">De: R$79,99</p>
+                            <p class="priceUpdate-card">Por:</p>
+                            <p class="currentPrice-card">R$39,99</p> <!--50%-->
+                        </div>
+
+                        <a href="" target="_blank" class="buy-btn">
+                            <span>Comprar</span>
+                        </a>
                     </div>
 
-                    <div class="slides-div" id="slide-2">
-                        <a href="" target="_blank"><img src="img/games/slider-promotions/dissidia-ps4.jpg" alt="Dissidia Final Fantasy PS4" class="promotions-img" id="promotions-img2"></a>
+                    <div class="card-promotion">
+                        <img src="img/games/slider-promotions/dissidia-ps4.jpg" alt="Dissidia Final Fantasy"
+                            class="promotions-img">
+
+                        <p class="title-card-promotion"> DISSIDIA FINAL FANTASY </p>
+
+                        <div class="price-card-promotions">
+                            <p class="oldPrice-card">De: R$69,99</p>
+                            <p class="priceUpdate-card">Por:</p>
+                            <p class="currentPrice-card">R$49,99</p>  <!--40%-->
+                        </div>
+
+                        <a href="" target="_blank" class="buy-btn">
+                            <span>Comprar</span>
+                        </a>
                     </div>
 
-                    <div class="slides-div" id="slide-3">
-                        <a href="" target="_blank"><img src="img/games/slider-promotions/yakuza-ps4.jpg" alt="The Yakuza PS4" class="promotions-img" id="promotions-img3"></a>
+                    <div class="card-promotion">
+                        <img src="img/games/slider-promotions/battlefield-xbox.jpg" alt="Battlefield 2042"
+                            class="promotions-img">
+
+                        <p class="title-card-promotion"> BATTLEFIELD 2042 </p>
+
+                        <div class="price-card-promotions">
+                            <p class="oldPrice-card">De: R$199,99</p>
+                            <p class="priceUpdate-card">Por:</p>
+                            <p class="currentPrice-card">R$119,99</p>  <!--40%-->
+                        </div>
+
+                        <a href="" target="_blank" class="buy-btn">
+                            <span>Comprar</span>
+                        </a>
                     </div>
 
-                    <div class="slides-div" id="slide-4">
-                        <a href="" target="_blank"><img src="img/games/slider-promotions/assassins-creed-xbox.jpg" alt="Assassins Creed XBOX" class="promotions-img" id="promotions-img4"></a>
+                    <div class="card-promotion">
+                        <img src="img/games/slider-promotions/dark-souls3-xbox.jpg" alt="Dark Souls III"
+                            class="promotions-img">
+
+                        <p class="title-card-promotion"> DARK SOULS III </p>
+
+                        <div class="price-card-promotions">
+                            <p class="oldPrice-card">De: R$79,99</p>
+                            <p class="priceUpdate-card">Por:</p>
+                            <p class="currentPrice-card">R$43,99</p>  <!--45%-->
+                        </div>
+
+                        <a href="" target="_blank" class="buy-btn">
+                            <span>Comprar</span>
+                        </a>
                     </div>
 
-                    <div class="slides-div" id="slide-5">
-                        <a href="" target="_blank"><img src="img/games/slider-promotions/battlefield-xbox.jpg" alt="Battlefield XBOX" class="promotions-img" id="promotions-img5"></a>
-                    </div>
+                    <div class="card-promotion">
+                        <img src="img/games/slider-promotions/assassins-creed-xbox.jpg" alt="Assassins Creed Unity"
+                            class="promotions-img">
 
+                        <p class="title-card-promotion"> ASSASSIN'S CREED UNITY </p>
 
-                    <div class="slides-div" id="slide-6">
-                        <a href="" target="_blank"><img src="img/games/slider-promotions/dark-souls3-xbox.jpg" alt="Dark Souls III XBOX" class="promotions-img" id="promotions-img6"></a>
+                        <div class="price-card-promotions">
+                            <p class="oldPrice-card">De: R$89,99</p>
+                            <p class="priceUpdate-card">Por:</p>
+                            <p class="currentPrice-card">R$62,99</p>  <!--30%-->
+                        </div>
+
+                        <a href="" target="_blank" class="buy-btn">
+                            <span>Comprar</span>
+                        </a>
                     </div>
 
                 </div>
