adicionado icon de promoção

--- a/index.html
+++ b/index.html
@@ -283,6 +283,11 @@
                         <a href="" target="_blank" class="buy-btn">
                             <span>Comprar</span>
                         </a>
+
+                        <div class="discount-card">
+                            <img src="img/icons/icon-promotion.svg">
+                            <span>50%</span>
+                        </div>
                     </div>
 
                     <div class="card-promotion">
@@ -300,6 +305,11 @@
                         <a href="" target="_blank" class="buy-btn">
                             <span>Comprar</span>
                         </a>
+
+                        <div class="discount-card">
+                            <img src="img/icons/icon-promotion.svg">
+                            <span>40%</span>
+                        </div>
                     </div>
 
                     <div class="card-promotion">
@@ -317,6 +327,11 @@
                         <a href="" target="_blank" class="buy-btn">
                             <span>Comprar</span>
                         </a>
+
+                        <div class="discount-card">
+                            <img src="img/icons/icon-promotion.svg">
+                            <span>40%</span>
+                        </div>
                     </div>
 
                     <div class="card-promotion">
@@ -334,6 +349,11 @@
                         <a href="" target="_blank" class="buy-btn">
                             <span>Comprar</span>
                         </a>
+
+                        <div class="discount-card">
+                            <img src="img/icons/icon-promotion.svg">
+                            <span>45%</span>
+                        </div>
                     </div>
 
                     <div class="card-promotion">
@@ -351,6 +371,11 @@
                         <a href="" target="_blank" class="buy-btn">
                             <span>Comprar</span>
                         </a>
+
+                        <div class="discount-card">
+                            <img src="img/icons/icon-promotion.svg">
+                            <span>30%</span>
+                        </div>
                     </div>
 
                 </div>
