--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                             <p class="currentPrice-card">R$39,99</p> <!--50%-->
                         </div>
 
-                        <a href="" target="_blank" class="buy-btn">
+                        <a href="txt/carrinho.txt" target="_blank" class="buy-btn">
                             <span>Comprar</span>
                         </a>
 
@@ -302,7 +302,7 @@
                             <p class="currentPrice-card">R$49,99</p>  <!--40%-->
                         </div>
 
-                        <a href="" target="_blank" class="buy-btn">
+                        <a href="txt/carrinho.txt" target="_blank" class="buy-btn">
                             <span>Comprar</span>
                         </a>
 
@@ -324,7 +324,7 @@
                             <p class="currentPrice-card">R$119,99</p>  <!--40%-->
                         </div>
 
-                        <a href="" target="_blank" class="buy-btn">
+                        <a href="txt/carrinho.txt" target="_blank" class="buy-btn">
                             <span>Comprar</span>
                         </a>
 
@@ -346,7 +346,7 @@
                             <p class="currentPrice-card">R$43,99</p>  <!--45%-->
                         </div>
 
-                        <a href="" target="_blank" class="buy-btn">
+                        <a href="txt/carrinho.txt" target="_blank" class="buy-btn">
                             <span>Comprar</span>
                         </a>
 
@@ -368,7 +368,7 @@
                             <p class="currentPrice-card">R$62,99</p>  <!--30%-->
                         </div>
 
-                        <a href="" target="_blank" class="buy-btn">
+                        <a href="txt/carrinho.txt" target="_blank" class="buy-btn">
                             <span>Comprar</span>
                         </a>
 
