--- a/index.html
+++ b/index.html
@@ -439,7 +439,10 @@
                     });
                 </script>
             </div>
+        </section>
 
+        <section>
+            
         </section>
 
     </main>
